--- a/src/app.css
+++ b/src/app.css
@@ -1,16 +1,52 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin "daisyui";
+@plugin "@tailwindcss/typography";
 
-html, body {
-  overflow: hidden;
+@plugin "daisyui/theme" {
+    name: "light";
+    default: true;
+    --color-primary: oklch(0.44 0.1613 26.9);
+    --color-primary-content: oklch(1 0.1643 26.9);
+    --color-base-100: oklch(1 0 0);
+    --color-base-200: oklch(0.96 0.016 99);
+    --color-base-300: oklch(0.89 0.0336 99.58);
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --depth: 1;
+    --noise: 1;
 }
 
-.btn-base {
-  @apply btn-ghost bg-base-300
+@config '../tailwind.config.ts';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: var(--color-gray-200, currentcolor);
+    }
 }
+
+html,
+body {
+    overflow: hidden;
+}
+
+/* .btn-base {
+    @apply btn-ghost bg-base-300;
+} */
 
 .tooltip:before {
-  white-space: pre-wrap;
-  text-align: center;
+    white-space: pre-wrap;
+    text-align: center;
 }
