--- a/src/app.css
+++ b/src/app.css
@@ -84,7 +84,7 @@
 
 @plugin "daisyui/theme" {
     name: "dawn";
-    default: true;
+    default: false;
     prefersdark: false;
     color-scheme: "light";
     --color-base-100: oklch(100% 0 0);
@@ -93,20 +93,20 @@
     --color-base-content: oklch(51% 0.222 16.935);
     --color-primary: oklch(63% 0.237 25.331);
     --color-primary-content: oklch(97% 0.013 17.38);
-    --color-secondary: oklch(70% 0.191 22.216);
+    --color-secondary: oklch(71% 0.194 13.428);
     --color-secondary-content: oklch(100% 0 0);
-    --color-accent: oklch(82% 0.119 306.383);
-    --color-accent-content: oklch(49% 0.265 301.924);
+    --color-accent: oklch(71% 0.203 305.504);
+    --color-accent-content: oklch(43% 0.218 303.724);
     --color-neutral: oklch(81% 0.117 11.638);
-    --color-neutral-content: oklch(45% 0.188 13.697);
-    --color-info: oklch(91% 0.08 205.041);
+    --color-neutral-content: oklch(41% 0.159 10.272);
+    --color-info: oklch(86% 0.127 207.078);
     --color-info-content: oklch(52% 0.105 223.128);
-    --color-success: oklch(92% 0.084 155.995);
+    --color-success: oklch(87% 0.15 154.449);
     --color-success-content: oklch(50% 0.118 165.612);
-    --color-warning: oklch(90% 0.076 70.697);
-    --color-warning-content: oklch(55% 0.163 48.998);
-    --color-error: oklch(88% 0.062 18.334);
-    --color-error-content: oklch(57% 0.245 27.325);
+    --color-warning: oklch(83% 0.128 66.29);
+    --color-warning-content: oklch(47% 0.137 46.201);
+    --color-error: oklch(70% 0.191 22.216);
+    --color-error-content: oklch(39% 0.141 25.723);
     --radius-selector: 0.5rem;
     --radius-field: 0.5rem;
     --radius-box: 1rem;
@@ -155,33 +155,10 @@
 
 @config '../tailwind.config.ts';
 
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-
-    *,
-    ::after,
-    ::before,
-    ::backdrop,
-    ::file-selector-button {
-        border-color: var(--color-gray-200, currentcolor);
-    }
-}
-
 html,
 body {
     overflow: hidden;
 }
-
-/* .btn-base {
-    @apply btn-ghost bg-base-300;
-} */
 
 .tooltip:before {
     white-space: pre-wrap;
